# SOT

./: .codedocs  .coveralls.yml  .travis.yml  CHANGES.txt  CMakeLists.txt  LICENSE.txt  README.md
doc/: CMakeLists.txt  Doxyfile.in  INDEX.md
include/: sot.h
include/sot_bits/: adaptive_sampling.h  approximant.h  candidate_points.h  common.h  dds.h  experimental_design.h  genetic_algorithm.h  kNN.h  merit_functions.h  optimizer.h  optimizer_dds.h  optimizer_dycors.h  optimizer_lmsrbf.h  problem.h  rbf.h  shepard.h  surrogate.h  test_problems.h  utils.h
src/: experimental_design.cpp
test/: CMakeLists.txt  test_adaptive.cpp  test_dds.cpp  test_dycors.cpp  test_expdes.cpp  test_ga.cpp  test_ga_sampling.cpp  test_kNN.cpp  test_optprobs.cpp  test_rbf.cpp  test_shepard.cpp  test_srbf.cpp  test_sync.cpp  test_utils.cpp
tests/: test_simple.cpp
