# Dependencies
find_package(Armadillo REQUIRED)
set(LIBRARIES ${ARMADILLO_LIBRARIES})
include_directories(${ARMADILLO_INCLUDE_DIRS})

# Enable C++11 support
include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
if(COMPILER_SUPPORTS_CXX11)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Ofast -msse4")
elseif(COMPILER_SUPPORTS_CXX0X)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -Ofast -msse4")
else()
        message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
endif()

# Build tests
include_directories("../include")
add_executable (test_kNN "test_kNN.cpp") 
target_link_libraries(test_kNN armadillo)
add_executable (test_rbf "test_rbf.cpp") 
target_link_libraries(test_rbf armadillo)
add_executable (test_shepard "test_shepard.cpp") 
target_link_libraries(test_shepard armadillo)
add_executable (test_dycors "test_dycors.cpp") 
target_link_libraries(test_dycors armadillo)
add_executable (test_srbf "test_srbf.cpp") 
target_link_libraries(test_srbf armadillo)
add_executable (test_dds "test_dds.cpp") 
target_link_libraries(test_dds armadillo)